--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
 :root {
     font-family: Nunito Sans;
@@ -45,6 +50,17 @@ h1 {
     line-height: 1.1;
 }
 
+img,
+svg {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    font-style: italic;
+    background-repeat: no-repeat;
+    background-size: cover;
+    shape-margin: 0.75rem;
+}
+
 button {
     border-radius: 8px;
     /* border: 1px solid transparent; */
@@ -70,6 +86,32 @@ button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
 } */
+[role="dialog"] {
+    max-height: 100dvh;
+    overflow: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+[role="dialog"]::-webkit-scrollbar {
+    display: none;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    width: 1rem;
+    height: 1rem;
+    aspect-ratio: 1;
+    border-radius: 6px;
+    padding: 0.625rem;
+}
+
+input[type="checkbox"]:checked {
+    background:
+        url("data:image/svg+xml,%3Csvg stroke='white' fill='white' stroke-width='0' viewBox='0 0 448 512' height='1em' width='1em' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z'%3E%3C/path%3E%3C/svg%3E")
+            center no-repeat,
+        #3b82f6;
+}
 
 @media (prefers-color-scheme: light) {
     :root {
