fix switch styling

--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -40,6 +40,8 @@
 .airplane {
     /* perspective: 20px; */
     /* perspective: 100px; */
+    /* aspect-ratio: 2.35;
+    height: 100%; */
 
     transform-style: preserve-3d;
     translate: 0px 100%;
