--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,11 @@ button {
     cursor: pointer;
 }
 
+button:focus-visible {
+    outline: 2px solid white;
+    outline-offset: 2px;
+}
+
 #root {
     height: 100%;
     width: 100%;
