--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -1,24 +1,30 @@
-.svg-container {
-    position: relative;
-    overflow: hidden;
-    /* mask-image: radial-gradient(
-        ellipse at center,
-        rgba(0, 0, 0, 0.9) 25%,
-        rgba(0, 0, 0, 0.2) 90%
-    );
-    background-origin: content-box;
-    background-clip: content-box; */
+figure {
+    background: url("https://thumbs.dreamstime.com/b/вращение-синего-и-белого-солнцезащитного-круга-движение-фон-228680277.jpg")
+        center/cover no-repeat;
+}
 
-    background:
-        radial-gradient(
-            ellipse at center,
-            rgba(0, 0, 0, 0.4) 10%,
-            rgba(0, 0, 0, 0.6) 25%,
-            rgba(0, 0, 0, 0.75) 35%,
-            rgba(0, 0, 0, 0.95) 75%
-        ),
-        url("https://thumbs.dreamstime.com/b/вращение-синего-и-белого-солнцезащитного-круга-движение-фон-228680277.jpg")
-            center/cover no-repeat;
+.svg-container {
+    overflow: hidden;
+
+    transition: background 1s ease-in;
+}
+
+.svg-container[data-active="true"] {
+    background: radial-gradient(
+        ellipse at center,
+        rgba(0, 0, 0, 0.4) 10%,
+        rgba(0, 0, 0, 0.6) 25%,
+        rgba(0, 0, 0, 0.75) 35%,
+        rgba(0, 0, 0, 0.95) 75%
+    );
+}
+
+.svg-container[data-active="false"] {
+    background: radial-gradient(
+        ellipse at center,
+        rgba(0, 0, 0, 0.8) 10%,
+        rgba(0, 0, 0, 0.95) 75%
+    );
 }
 
 .sunrise {
@@ -44,7 +50,7 @@
     height: 100%; */
 
     transform-style: preserve-3d;
-    translate: 0px 100%;
+    translate: 10px 200px;
     rotate: -12deg;
     transition: all 3s linear;
 }
@@ -69,83 +75,79 @@
 
 @keyframes airplane {
     0% {
-        translate: 0px 240px;
+        translate: 10px 200px;
     }
-
     5% {
-        translate: 0px 240px;
+        translate: 10px 200px;
     }
     10% {
-        translate: 23px 238px;
+        translate: 26px 198px;
     }
     15% {
-        translate: 45px 235px;
+        translate: 43px 196px;
     }
     20% {
-        translate: 68px 232px;
+        translate: 59px 194px;
     }
     25% {
-        translate: 91px 228px;
+        translate: 75px 191px;
     }
     30% {
-        translate: 113px 223px;
+        translate: 92px 187px;
     }
     35% {
-        translate: 136px 218px;
+        translate: 108px 183px;
     }
     40% {
-        translate: 158px 211px;
+        translate: 124px 179px;
     }
     45% {
-        translate: 181px 204px;
+        translate: 141px 173px;
     }
     50% {
-        translate: 204px 195px;
+        translate: 157px 167px;
     }
     55% {
-        translate: 226px 186px;
+        translate: 173px 159px;
     }
     60% {
-        translate: 249px 174px;
+        translate: 189px 150px;
     }
     65% {
-        translate: 272px 161px;
+        translate: 206px 139px;
     }
     70% {
-        translate: 294px 145px;
+        translate: 222px 127px;
     }
     75% {
-        translate: 317px 127px;
+        translate: 238px 112px;
     }
     80% {
-        translate: 339px 106px;
+        translate: 255px 95px;
     }
     85% {
-        translate: 362px 82px;
+        translate: 271px 75px;
     }
     90% {
-        translate: 385px 54px;
+        translate: 287px 51px;
     }
     95% {
-        translate: 407px 21px;
+        translate: 304px 22px;
     }
     100% {
-        translate: 430px -18px;
+        translate: 320px -11px;
     }
-    /* 100% {
-        translate: 430px -18px;
-    } */
 }
 
 @keyframes fly {
     0% {
-        translate: 430px -18px;
+        translate: 320px -11px;
     }
     50% {
-        translate: 470px 21px;
+        translate: 400px 60px;
     }
     100% {
-        translate: 430px -18px;
+        translate: 320px -11px;
     }
 }
 
