--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,8 @@ html {
 }
 
 body {
-    display: flex;
-    place-items: center;
     min-width: 320px;
-    min-height: 100vh;
+    min-height: 100dvh;
     height: 100%;
 }
 
@@ -109,4 +107,11 @@ input[type="checkbox"]:checked {
         url("data:image/svg+xml,%3Csvg stroke='white' fill='white' stroke-width='0' viewBox='0 0 448 512' height='1em' width='1em' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z'%3E%3C/path%3E%3C/svg%3E")
             center no-repeat,
         #3b82f6;
+}
+
+[popover]:popover-open {
+    position: absolute;
+    inset: unset;
+
+    top: 50%;
 }
