--- a/src/index.css
+++ b/src/index.css
@@ -158,3 +158,15 @@ input[type="checkbox"]:checked {
 
     top: 50%;
 }
+
+@media (max-width: 340px) {
+    body {
+        overflow-x: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+    body::-webkit-scrollbar {
+        /* height: 0px;  */
+        display: none;
+    }
+}
