--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ html {
 }
 
 body {
-    min-width: 320px;
+    min-width: 340px;
     min-height: 100dvh;
     height: 100%;
 }
@@ -60,11 +60,33 @@ button:focus-visible {
     outline-offset: 2px;
 }
 
-#root {
-    height: 100%;
-    width: 100%;
-    max-width: 760px;
-    margin: 0 auto;
+.content-wrapper {
+    /* height: 100%; */
+    width: min(1024px, 100% - 4rem);
+
+    margin-inline: auto;
+}
+
+@media (max-width: 767px) {
+    .content-wrapper {
+        width: min(767px, 100% - 2rem);
+    }
+}
+
+@media (max-width: 420px) {
+    .content-wrapper {
+        width: min(420px, 100% - 1rem);
+    }
+
+    body {
+        overflow-x: auto;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+    body::-webkit-scrollbar {
+        /* height: 0px;  */
+        display: none;
+    }
 }
 
 [role="dialog"] {
@@ -157,16 +179,4 @@ input[type="checkbox"]:checked {
     inset: unset;
 
     top: 50%;
-}
-
-@media (max-width: 340px) {
-    body {
-        overflow-x: auto;
-        scrollbar-width: none;
-        -ms-overflow-style: none;
-    }
-    body::-webkit-scrollbar {
-        /* height: 0px;  */
-        display: none;
-    }
 }
