--- a/src/index.css
+++ b/src/index.css
@@ -201,3 +201,17 @@ input[type="checkbox"]:checked {
         )
         1;
 }
+
+strong {
+    font-weight: 700;
+}
+
+*::-webkit-media-controls-play-button {
+    display: none !important;
+    -webkit-appearance: none;
+}
+
+*::-webkit-media-controls-start-playback-button {
+    display: none !important;
+    -webkit-appearance: none;
+}
